--- a/bbs.html
+++ b/bbs.html
@@ -36,13 +36,36 @@
 		</div>
 	</div>
 	<!-- 顶部 end -->
+	<div class="editor-lump hide">
+		<div class="clearfix">
+			<div class="fl">
+				<p>帖子分类</p>
+				<select>
+					<option>谈天说地</option>
+					<option>活动发布</option>
+					<option>BUG建议</option>
+				</select>
+			</div>
+			<div class="fl ml-30">
+				<p>文章标题</p>
+				<input placeholder="请输入文章标题" class="ipt">
+			</div>
+		</div>
+		<div class="edit-content">
+			<i class="stop">×</i>
+			<p>帖子内容</p>
+			<textarea placeholder="说点啥好呢..."></textarea>
+			<span>提示：可在“我的围诚”(个人中心)进行帖子相关（查询、删除）操作哦~</span>
+			<a href="javascript:void();">发布</a>
+		</div>
+	</div>
 	<div class="bbs-container layout1000 clearfix">
 		<div class="left-content fl">
 			<div class="top clearfix">
 				<div class="sort-lump fl">最新主题<i class="sort"></i>
 					<div class="sort-item hide">
-						<p>最新主题</p>
-						<p>最热评论</p>
+						<a href="#">最新主题</a>
+						<a href="#">最热评论</a>
 					</div>
 				</div>
 				<p class="edit fr"><i></i>发表新主题</p>
@@ -58,7 +81,7 @@
 						<div class="fl">
 							<div class="clearfix tt">
 								<span class="kind fl">全站置顶</span>
-								<a class="fl" href="#">围诚Plus BetaV1.0 正式版发布</a>
+								<a class="fl light" href="#">围诚Plus BetaV1.0 正式版发布</a>
 							</div>
 							<div class="txt">
 								<p><span class="w">眼川哥</span>&nbsp;发表于：<span class="time">2017-10-10</span>&nbsp;最新回复：<span class="new">2017-10-18</span></p>
@@ -78,131 +101,95 @@
 									</div>
 									<div class="fl">
 										<p class="name">我喜欢DOTA1</p>  
-									   	<p class="school">广州商学院</p>
-									   	<span class="sex">男<span class="year ml-5">22岁</span><span>
-									   	<p>上次登陆时间：<span class="time">2017-10-17</span></p>
+										<p class="school">广州商学院</p>
+										<span class="sex">男</span><span class="year ml-5">22岁<span>
+										<p>上次登陆时间：<span class="time">2017-10-17</span></p>
 									</div>							
 								</div>    
 							</div>
 						</div>
 					</li>
-					<li class="clearfix">
-						<div class="icon fl">
-							<a href="#">
-								<img src="images/local/maiheliang.jpg" onmouseover="tooltip.pop(this, '#tooltip1', {position:1, offsetX:-20, effect:'slide'})">
-							</a>
-						</div>
-						<div class="fl">
-							<div class="clearfix tt">
-								<span class="kind fl">全站置顶</span>
-								<a class="fl" href="#">围诚Plus BetaV1.0 正式版发布</a>
-							</div>
-							<div class="txt">
-								<p><span class="w">眼川哥</span>&nbsp;发表于：<span class="time">2017-10-10</span>&nbsp;最新回复：<span class="new">2017-10-18</span></p>
-							</div>
-						</div>
-						<div class="fr mt-10 mr-10">
-							<span class="comment">421</span>
-						</div>
-						<div style="display: none;" class="tooltip">
-							<div id="tooltip1">
-								<div class="clearfix">
-									<div class="img-box fl">
-										<img src="images/local/maiheliang.jpg">
-										<div class="talk clearfix">
-											<a href="#" class="fl">+私聊</a>
-										</div>
-									</div>
-									<div class="fl">
-										<p class="name">我喜欢DOTA2</p>  
-									   	<p class="school">广州商学院</p>
-									   	<span class="sex">男<span class="year ml-5">22岁</span><span>
-									   	<p>上次登陆时间：<span class="time">2017-10-17</span></p>
-									</div>							
-								</div>    
-							</div>
-						</div>
-					</li>
-					<li class="clearfix">
-						<div class="icon fl">
-							<a href="#">
-								<img src="images/local/maiheliang.jpg" onmouseover="tooltip.pop(this, '#tooltip2', {position:1, offsetX:-20, effect:'slide'})">
-							</a>
-						</div>
-						<div class="fl">
-							<div class="clearfix tt">
-								<span class="kind fl">全站置顶</span>
-								<a class="fl" href="#">围诚Plus BetaV1.0 正式版发布</a>
-							</div>
-							<div class="txt">
-								<p><span class="w">眼川哥</span>&nbsp;发表于：<span class="time">2017-10-10</span>&nbsp;最新回复：<span class="new">2017-10-18</span></p>
-							</div>
-						</div>
-						<div class="fr mt-10 mr-10">
-							<span class="comment">421</span>
-						</div>
-						<div style="display: none;" class="tooltip">
-							<div id="tooltip2">
-								<div class="clearfix">
-									<div class="img-box fl">
-										<img src="images/local/maiheliang.jpg">
-										<div class="talk clearfix">
-											<a href="#" class="fl">+私聊</a>
-										</div>
-									</div>
-									<div class="fl">
-										<p class="name">我喜欢DOTA3</p>  
-									   	<p class="school">广州商学院</p>
-									   	<span class="sex">男<span class="year ml-5">22岁</span><span>
-									   	<p>上次登陆时间：<span class="time">2017-10-17</span></p>
-									</div>							
-								</div>    
-							</div>
-						</div>
-					</li>
-					<li class="clearfix">
-						<div class="icon fl">
-							<a href="#">
-								<img src="images/local/maiheliang.jpg" onmouseover="tooltip.pop(this, '#tooltip3', {position:1, offsetX:-20, effect:'slide'})">
-							</a>
-						</div>
-						<div class="fl">
-							<div class="clearfix tt">
-								<span class="kind fl">全站置顶</span>
-								<a class="fl" href="#">围诚Plus BetaV1.0 正式版发布</a>
-							</div>
-							<div class="txt">
-								<p><span class="w">眼川哥</span>&nbsp;发表于：<span class="time">2017-10-10</span>&nbsp;最新回复：<span class="new">2017-10-18</span></p>
-							</div>
-						</div>
-						<div class="fr mt-10 mr-10">
-							<span class="comment">421</span>
-						</div>
-						<div style="display: none;" class="tooltip">
-							<div id="tooltip3">
-								<div class="clearfix">
-									<div class="img-box fl">
-										<img src="images/local/maiheliang.jpg">
-										<div class="talk clearfix">
-											<a href="#" class="fl">+私聊</a>
-										</div>
-									</div>
-									<div class="fl">
-										<p class="name">我喜欢DOTA4</p>  
-									   	<p class="school">广州商学院</p>
-									   	<span class="sex">男<span class="year ml-5">22岁</span><span>
-									   	<p>上次登陆时间：<span class="time">2017-10-17</span></p>
-									</div>							
-								</div>    
-							</div>
-						</div>
-					</li>							
 				</ul>
 			</div>
 			<div class="more mt-20"><a class="tc" href="javascript:void(0);">加载更多</a></div>
 		</div>
 		<div class="right-content fl">
+				<div class="progress-lump">
+					<h2 class="light">围诚社区开发进度</h2>
+					<div class="progress">
+						<div class="now"></div>
+						<p>10<span>%</span></p>
+					</div>
+				</div>
 
+				<div class="subarea-lump">
+					<h2>主题板块</h2>
+					<ul class="clearfix">
+						<li><a href="#"><i class="all"></i><p>全部板块</p></a></li>
+						<li><a href="#"><i class="talk"></i><p>谈天说地</p></a></li>
+						<li><a href="#"><i class="act"></i><p>活动发布</p></a></li>
+						<li><a href="#"><i class="bug"></i><p>BUG建议</p></a></li>
+					</ul>
+				</div>
+
+				<div class="advertment-lump">
+					<ul class="banner">
+						<li class="cur">
+							<a href="#">
+								<img src="images/local/bbs_img1.jpg">
+								<div class="txt-mask">
+									<p>「校园招聘」专题<br><span>千万职位等你来！</span></p>
+
+								</div>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="images/local/bbs_img2.jpg">
+								<div class="txt-mask">
+									<p>「喜迎十九大」<br><span>不忘初心，永远跟着党走！</span></p>
+
+								</div>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="images/local/bbs_img5.jpg">
+								<div class="txt-mask">
+									<p>「游侠联盟」校招季<br><span>offer等你来拿！</span></p>
+
+								</div>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="images/local/bbs_img3.jpg">
+								<div class="txt-mask">
+									<p>「撸起袖子加油干」<br><span>坚持共产党的领导！</span></p>
+
+								</div>
+							</a>
+						</li>
+					</ul>
+					<ul class="slide">
+						<li class="cur"><a href="#"></a></li>
+						<li><a href="#"></a></li>
+						<li><a href="#"></a></li>
+						<li><a href="#"></a></li>
+					</ul>
+				</div>
+
+				<div class="data-count">
+					<h2>站点统计</h2>
+					<ul>
+						<li><p>站点主题：<span>围诚Plus</span></p></li>
+						<li><p>Plus帖子：<span class="number">854</span></p></li>
+						<li><p>Plus用户：<span class="people">1823</span></p></li>
+						<li><p>今日帖子：<span class="topic">56</span></p></li>
+						<li><p>今日注册：<span class="enroll">32</span></p></li>
+						<li><p>运行耗时：<span class="time">0.25s</span></p></li>
+					</ul>
+				</div>
 		</div>
 	</div>
 	<!-- 正文内容 end -->
@@ -210,95 +197,100 @@
 		<div class="mask"></div>
 	</div>
 	<!-- 遮罩层 end-->
-	
 	<!-- 注册界面 end-->
 	<div class="chat-lump">
-		<div class="friend">
-			<p>- - 好友列表 - -</p>
-		</div>
-		<ul class="chat-list">
-			<li class="clearfix">
-				<img class="fl" src="images/local/init.jpg">
-				<p class="fl">未登录</p>
-			</li>
-		</ul>
-		<div class="chat-box hide">
-			<div class="operate clearfix">
-				<span class="fr">×</span>
+			<div class="friend">
+				<p>- - 好友列表 - -</p>
 			</div>
-			<p class="chater-name">皇族White 五五开 卢本伟</p>
-			<ul class="chater-content">
-				<li class="item clearfix">
-					<img class="fl" src="images/local/lubenwei.jpg">
-					<p class="fl">你好，我是卢本伟</p>
+			<ul class="chat-list">
+				<li class="clearfix">
+					<img class="fl" src="images/local/init.jpg">
+					<p class="fl">未登录</p>
 				</li>
-				<li class="item clearfix">
-					<img class="fl" src="images/local/lubenwei.jpg">
-					<p class="fl">请多指教</p>
+				<li class="clearfix">
+					<img class="fl" src="images/local/mafeifei.jpg">
+					<p class="fl">卢本伟</p>
 				</li>
-				<li class="item clearfix">
-					<img class="fl" src="images/local/lubenwei.jpg">
-					<div class="txt fl">
-						<p>
-							请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教
-						</p>
-					</div>
-				</li>
-				<li class="item clearfix">
-					<img class="fl" src="images/local/lubenwei.jpg">
-					<div class="txt fl">
-						<p>
-							请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教
-						</p>
-					</div>
-				</li>
-				<li class="item clearfix">
-					<img class="fl" src="images/local/lubenwei.jpg">
-					<div class="txt fl">
-						<p>
-							请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教
-						</p>
-					</div>
-				</li>
-				<li class="item clearfix">
-					<img class="fl" src="images/local/lubenwei.jpg">
-					<div class="txt fl">
-						<p>
-							请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教
-						</p>
-					</div>
-				</li>
-				<li class="item clearfix">
-					<img class="fr" src="images/local/mafeifei.jpg">
-					<div class="txt fr">
-						<p>
-							请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教
-						</p>
-					</div>
-				</li>
-				<li class="item clearfix">
-					<img class="fr" src="images/local/mafeifei.jpg">
-					<div class="txt fr">
-						<p>
-							请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教
-						</p>
-					</div>
-				</li>
-
 			</ul>
-			<div class="chat">
-				<textarea value="Communciate..."></textarea>
-				<button class="btn fr">发送</button>
+			<div class="chat-box hide">
+				<div class="operate clearfix">
+					<span class="fr">×</span>
+				</div>
+				<p class="chater-name">皇族White 五五开 卢本伟</p>
+				<ul class="chater-content">
+					<li class="item clearfix">
+						<img class="fl" src="images/local/lubenwei.jpg">
+						<p class="fl">你好，我是卢本伟</p>
+					</li>
+					<li class="item clearfix">
+						<img class="fl" src="images/local/lubenwei.jpg">
+						<p class="fl">请多指教</p>
+					</li>
+					<li class="item clearfix">
+						<img class="fl" src="images/local/lubenwei.jpg">
+						<div class="txt fl">
+							<p>
+								请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教
+							</p>
+						</div>
+					</li>
+					<li class="item clearfix">
+						<img class="fl" src="images/local/lubenwei.jpg">
+						<div class="txt fl">
+							<p>
+								请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教
+							</p>
+						</div>
+					</li>
+					<li class="item clearfix">
+						<img class="fl" src="images/local/lubenwei.jpg">
+						<div class="txt fl">
+							<p>
+								请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教
+							</p>
+						</div>
+					</li>
+					<li class="item clearfix">
+						<img class="fl" src="images/local/lubenwei.jpg">
+						<div class="txt fl">
+							<p>
+								请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教
+							</p>
+						</div>
+					</li>
+					<li class="item clearfix">
+						<img class="fr" src="images/local/mafeifei.jpg">
+						<div class="txt fr">
+							<p>
+								请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教
+							</p>
+						</div>
+					</li>
+					<li class="item clearfix">
+						<img class="fr" src="images/local/mafeifei.jpg">
+						<div class="txt fr">
+							<p>
+								请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教请多指教
+							</p>
+						</div>
+					</li>
+
+				</ul>
+				<div class="chat">
+					<textarea value="Communciate..."></textarea>
+					<button class="btn fr">发送</button>
+				</div>
 			</div>
-		</div>
-		<div class="addfriend">
-			<button>添加好友</button>
-		</div>
+			<div class="addfriend">
+				<!-- 	<button>添加好友</button> -->
+			</div>
 	</div>
 	<!-- 登录界面 end-->
+	</div>
 	<div id="modal-alert" class="iziModal"></div>
 	<div id="modal-alert1" class="iziModal"></div>
-	<script src="js/common.js"></script>
-	<script src="js/placeholder.js"></script> 
+<script src="js/bbs.js"></script>
+<script src="js/common.js"></script>
+<script src="js/placeholder.js"></script> 
 </body>
 </html>
