--- a/login.html
+++ b/login.html
@@ -149,7 +149,7 @@
                                });});
 		$('#modal-alert1').on('click','.iziModal-button-close',function(){
 				//UnMaskIt($('.mask'));
-			self.location='indexx.html';
+			window.history.back();
 		});
 
 
