--- a/bbs_comment.html
+++ b/bbs_comment.html
@@ -69,7 +69,7 @@
 	<div class="bbs-container layout1000 clearfix">
 		<div class="left-content fl">
 			<div class="top clearfix">
-				<div class="sort-lump fl">最新主题<i class="sort"></i>
+				<div class="sort-lump fl">最热评论<i class="sort"></i>
 					<div class="sort-item hide">
 						<a href="#">最新主题</a>
 						<a href="#">最热评论</a>
