--- a/bbs_page/2017_10/bbs_item.html
+++ b/bbs_page/2017_10/bbs_item.html
@@ -7,13 +7,8 @@
 	<link rel="stylesheet" href="../../css/common.css"></link>
 	<link rel="stylesheet" href="../../css/iziModal.css"></link>
 	<link rel="stylesheet" href="../../css/bbs.css"></link>
-	<link rel="stylesheet" href="../../css/jq22.css"></link>
-	<link rel="stylesheet" href="../../css/webuploader.css">
-	<link rel="stylesheet" href="../../css/tooltip.css"></link>
 	<script src="../../js/jquery.js"></script>
 	<script src="../../js/iziModal.js"></script>
-	<script src="../../js/webuploader.js"></script>
-	<script src="../../js/tooltip.js"></script>
 	<script src="../../js/global.js"></script>
 	<script src="../../js/init.js"></script>
 	<script src="../../js/placeholder.js"></script>
@@ -31,7 +26,7 @@
 				<li>
 					<div class="head clearfix">
 						<img src="../../images/local/init.jpg" class="fl">
-						<p class="fl">请 <a href="login.html">登录</a></p>
+						<p class="fl">请 <a href="../../login.html">登录</a></p>
 					</div>
 				</li>
 			</ul>
@@ -56,7 +51,54 @@
 					<p>测试测试我是内容</p>
 				</div>
 			</div>
-			
+			<div class="comment-lump mt-20">
+				<p class="tt">评论区<span>(共<em>300</em>条回复)</span></p>
+				<div class="mes">
+					<ul>
+						<li class="clearfix">
+							<div class="img-box fl">
+								<img src="../../images/local/maiheliang.jpg" class="comment-img">
+							</div>
+							<div class="txt fl">
+								<span class="comment-name">我喜欢DOTA</span><span class="comment-time">2017-10-29</span>
+								<p class="comment-txt">永远支持LPL,S8赛季见！</p>
+							</div>
+						</li>
+						<li class="clearfix">
+							<div class="img-box fl">
+								<img src="../../images/local/maiheliang.jpg" class="comment-img">
+							</div>
+							<div class="txt fl">
+								<span class="comment-name">我喜欢DOTA</span><span class="comment-time">2017-10-29</span>
+								<p class="comment-txt">永远支持LPL,S8赛季见！</p>
+							</div>
+						</li>
+						<li class="clearfix">
+							<div class="img-box fl">
+								<img src="../../images/local/maiheliang.jpg" class="comment-img">
+							</div>
+							<div class="txt fl">
+								<span class="comment-name">我喜欢DOTA</span><span class="comment-time">2017-10-29</span>
+								<p class="comment-txt">永远支持LPL,S8赛季见！</p>
+							</div>
+						</li>
+						<li class="clearfix">
+							<div class="img-box fl">
+								<img src="../../images/local/maiheliang.jpg" class="comment-img">
+							</div>
+							<div class="txt fl">
+								<span class="comment-name">我喜欢DOTA</span><span class="comment-time">2017-10-29</span>
+								<p class="comment-txt">永远支持LPL,S8赛季见！</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="report-comment">
+				<p>发表评论</p>
+				<textarea placeholder="说点什么...."></textarea>
+				<button>发表</button>		
+			</div>
 		</div>
 		<div class="right-content fl">
 			<div class="progress-lump">
@@ -234,7 +276,7 @@
 </div>
 <div id="modal-alert" class="iziModal"></div>
 <div id="modal-alert1" class="iziModal"></div>
-<script src="../../js/bbs_item.js"></script>
+<script src="../js/bbs_item.js"></script>
 <script src="../../js/placeholder.js"></script> 
 </body>
 </html>
