--- a/bbs.html
+++ b/bbs.html
@@ -118,7 +118,22 @@
 					</li> -->
 				</ul>
 			</div>
-			<div class="more mt-20"><a class="tc" href="javascript:void(0);">加载更多</a></div>
+			<ul class="pagination-lump clearfix">
+				<li class="prev"><p>首页</p></li>
+				<li class="cur"><p>1</p></li>
+				<li><p>2</p></li>
+				<li><p>3</p></li>
+				<li><p>4</p></li>
+				<li><p>5</p></li>
+				<li><p>6</p></li>
+				<li><p>7</p></li>
+				<li><p>8</p></li>
+				<li><p>9</p></li>
+				<li><p>10</p></li>
+				<li class="next"><p>下一页</p></li>
+				<li class="last"><p>返回上个状态</p></li>
+			</ul>
+			<!-- <div class="more mt-20"><button class="tc">加载更多</button></div> -->
 		</div>
 		<div class="right-content fl">
 			<div class="progress-lump">
