登录注册逻辑代码优化 11.16更新

--- a/bbs.html
+++ b/bbs.html
@@ -22,10 +22,10 @@
 	<div class="header-box clearfix">
 		<div class="layout1000 clearfix">
 			<ul class="nav fl">
-				<li class="cur"><a href="#">围诚Plus</a></li>
-				<li><a href="#">围诚主页</a></li>
+				<li class="cur"><a href="bbs.html">围诚Plus</a></li>
+				<li><a href="indexx.html">围诚主页</a></li>
 				<li><a href="#">围诚三天</a></li>
-				<li><a href="#">我的围诚</a></li>
+				<li><a href="person-center.html">我的围诚</a></li>
 			</ul>
 			<ul class="fr">
 				<li>
