--- a/indexx.html
+++ b/indexx.html
@@ -30,7 +30,7 @@
 			<div id="menu">
 				<ul class="nav">	
 					<li class="cur"><a href="#">围诚热点</a></li>
-					<li><a href="#">围诚Plus</a></li>
+					<li><a href="bbs.html">围诚Plus</a></li>
 					<li><a href="#">围诚三天</a></li>
 					<li><a href="javascript:void(0);">我的围诚</a></li>
 				</ul>
@@ -66,98 +66,185 @@
 	</div>
 
 	<div class="news-item layout">
-		<ul>
-			<li>
-				<a class="txt" href="#">新生军训花样多 头顶瓶子脚底放手机</a>
-				<div class="clearfix">
-					<div class="img-box">
-						<a href="#"><img src="images/local/junxun-1.jpg"></a>
+		<div class="clearfix">
+			<div class="left-navgation fl">
+				<h2>Plus跟帖排行<a href="bbs.html">更多>></a></h2>
+				<ul>
+					<!-- <li class="clearfix">
+						<em class="fl">1</em>
+						<a href="#" class="fl">恭喜RNG WE晋级决赛会师鸟巢！</a>
+					</li>
+					<li class="clearfix">
+						<em class="fl">2</em>
+						<a href="#" class="fl">恭喜RNG WE晋级决赛会师鸟巢！</a>
+					</li>
+					<li class="clearfix">
+						<em class="fl">3</em>
+						<a href="#" class="fl">恭喜RNG WE晋级决赛会师鸟巢！</a>
+					</li>
+					<li class="clearfix">
+						<em class="fl">4</em>
+						<a href="#" class="fl">恭喜RNG WE晋级决赛会师鸟巢！</a>
+					</li>
+					<li class="clearfix">
+						<em class="fl">5</em>
+						<a href="#" class="fl">恭喜RNG WE晋级决赛会师鸟巢！</a>
+					</li>
+					<li class="clearfix">
+						<em class="fl">6</em>
+						<a href="#" class="fl">恭喜RNG WE晋级决赛会师鸟巢！</a>
+					</li>
+					<li class="clearfix">
+						<em class="fl">7</em>
+						<a href="#" class="fl">恭喜RNG WE晋级决赛会师鸟巢！</a>
+					</li>
+					<li class="clearfix">
+						<em class="fl">8</em>
+						<a href="#" class="fl">恭喜RNG WE晋级决赛会师鸟巢！</a>
+					</li>
+					<li class="clearfix">
+						<em class="fl">9</em>
+						<a href="#" class="fl">恭喜RNG WE晋级决赛会师鸟巢！</a>
+					</li>
+					<li class="clearfix">
+						<em class="fl">10</em>
+						<a href="#" class="fl">恭喜RNG WE晋级决赛会师鸟巢！</a>
+					</li>
+ -->
+				</ul>
+			</div>
+			<ul class="list fl">
+				<li>
+					<a class="txt" href="#">抱着娃去上学！广西＂大叔＂毕业5年后重读本科</a>
+					<div class="clearfix">
+						<div class="img-box">
+							<a href="#"><img src="images/local/2017_11_gxuniversity_1.jpg"></a>
+						</div>
+						<div class="img-box">					
+							<a href="#"><img src="images/local/2017_11_gxuniversity_2.jpg"></a>
+						</div>
+						<div class="img-box">					
+							<a href="#"><img src="images/local/2017_11_gxuniversity_3.jpg"></a>
+						</div>
 					</div>
-					<div class="img-box">					
-						<a href="#"><img src="images/local/junxun-2.jpg"></a>
+					<div class="clearfix">
+						<p class="fl">作者：<span>小华华</span></p>
+						<p class="update fr">1小时前</p>
 					</div>
-					<div class="img-box">					
-						<a href="#"><img src="images/local/junxun-3.jpg"></a>
+				</li>
+				<li>
+					<a class="txt" href="#">成都体院最帅教练爆红网络！竟是95后湘妹子</a>
+					<div class="clearfix">
+						<div class="img-box">
+							<a href="#"><img src="images/local/2017_11_gymcoach_1.jpg"></a>
+						</div>
+						<div class="img-box">					
+							<a href="#"><img src="images/local/2017_11_gymcoach_2.jpg"></a>
+						</div>
+						<div class="img-box">					
+							<a href="#"><img src="images/local/2017_11_gymcoach_3.jpg"></a>
+						</div>
 					</div>
-				</div>
-				<div class="clearfix">
-					<p class="fl">作者：<span>小川川</span></p>
-					<p class="update fr">3小时前</p>
-				</div>
-			</li>
-			<li>
-				<a class="txt" href="#">易烊千玺开学典礼发言正能量满满 他说了啥?</a>
-				<div class="clearfix">
-					<div class="img-box">
-						<a href="#"><img src="images/local/yiyang-1.jpg"></a>
+					<div class="clearfix">
+						<p class="fl">作者：<span>小亮亮</span></p>
+						<p class="update fr">2小时前</p>
 					</div>
-					<div class="img-box">					
-						<a href="#"><img src="images/local/yiyang-2.jpg"></a>
+				</li>	
+				<li>
+					<a class="txt" href="#">新生军训花样多 头顶瓶子脚底放手机</a>
+					<div class="clearfix">
+						<div class="img-box">
+							<a href="#"><img src="images/local/junxun-1.jpg"></a>
+						</div>
+						<div class="img-box">					
+							<a href="#"><img src="images/local/junxun-2.jpg"></a>
+						</div>
+						<div class="img-box">					
+							<a href="#"><img src="images/local/junxun-3.jpg"></a>
+						</div>
 					</div>
-					<div class="img-box">					
-						<a href="#"><img src="images/local/yiyang-3.jpg"></a>
+					<div class="clearfix">
+						<p class="fl">作者：<span>小川川</span></p>
+						<p class="update fr">3小时前</p>
 					</div>
-				</div>
-				<div class="clearfix">
-					<p class="fl">作者：<span>小良良</span></p>
-					<p class="update fr">2天前</p>
-				</div>
-			</li>
-			<li>
-				<a class="txt" href="#">复旦教授夫妇送儿入学 一家三口成校友</a>
-				<div class="clearfix">
-					<div class="img-box">
-						<a href="#"><img src="images/local/fudan-1.jpg"></a>
+				</li>
+				<li>
+					<a class="txt" href="#">易烊千玺开学典礼发言正能量满满 他说了啥?</a>
+					<div class="clearfix">
+						<div class="img-box">
+							<a href="#"><img src="images/local/yiyang-1.jpg"></a>
+						</div>
+						<div class="img-box">					
+							<a href="#"><img src="images/local/yiyang-2.jpg"></a>
+						</div>
+						<div class="img-box">					
+							<a href="#"><img src="images/local/yiyang-3.jpg"></a>
+						</div>
 					</div>
-					<div class="img-box">					
-						<a href="#"><img src="images/local/fudan-2.jpg"></a>
+					<div class="clearfix">
+						<p class="fl">作者：<span>小良良</span></p>
+						<p class="update fr">17小时前</p>
 					</div>
-					<div class="img-box">					
-						<a href="#"><img src="images/local/fudan-3.jpg"></a>
+				</li>
+				<li>
+					<a class="txt" href="#">复旦教授夫妇送儿入学 一家三口成校友</a>
+					<div class="clearfix">
+						<div class="img-box">
+							<a href="#"><img src="images/local/fudan-1.jpg"></a>
+						</div>
+						<div class="img-box">					
+							<a href="#"><img src="images/local/fudan-2.jpg"></a>
+						</div>
+						<div class="img-box">					
+							<a href="#"><img src="images/local/fudan-3.jpg"></a>
+						</div>
 					</div>
-				</div>
-				<div class="clearfix">
-					<p class="fl">作者：<span>小成成</span></p>
-					<p class="update fr">1天前</p>
-				</div>
-			</li>
-			<li>
-				<a class="txt" href="#">川大食堂摆“土豆宴” 真相很感人</a>
-				<div class="clearfix">
-					<div class="img-box">
-						<a href="#"><img src="images/local/chuanda-1.jpg"></a>
+					<div class="clearfix">
+						<p class="fl">作者：<span>小成成</span></p>
+						<p class="update fr">1天前</p>
 					</div>
-					<div class="img-box">					
-						<a href="#"><img src="images/local/chuanda-2.jpg"></a>
+				</li>
+				<li>
+					<a class="txt" href="#">川大食堂摆“土豆宴” 真相很感人</a>
+					<div class="clearfix">
+						<div class="img-box">
+							<a href="#"><img src="images/local/chuanda-1.jpg"></a>
+						</div>
+						<div class="img-box">					
+							<a href="#"><img src="images/local/chuanda-2.jpg"></a>
+						</div>
+						<div class="img-box">					
+							<a href="#"><img src="images/local/chuanda-3.jpg"></a>
+						</div>
 					</div>
-					<div class="img-box">					
-						<a href="#"><img src="images/local/chuanda-3.jpg"></a>
+					<div class="clearfix">
+						<p class="fl">作者：<span>小成成</span></p>
+						<p class="update fr">1天前</p>
 					</div>
-				</div>
-				<div class="clearfix">
-					<p class="fl">作者：<span>小成成</span></p>
-					<p class="update fr">1天前</p>
-				</div>
-			</li>
-			<li>
-				<a class="txt" href="#">北影新生报到第一天 生活费月均3000元</a>
-				<div class="clearfix">
-					<div class="img-box">
-						<a href="#"><img src="images/local/beiying-1.jpg"></a>
+				</li>
+				<li>
+					<a class="txt" href="#">北影新生报到第一天 生活费月均3000元</a>
+					<div class="clearfix">
+						<div class="img-box">
+							<a href="#"><img src="images/local/beiying-1.jpg"></a>
+						</div>
+						<div class="img-box">					
+							<a href="#"><img src="images/local/beiying-2.jpg"></a>
+						</div>
+						<div class="img-box">					
+							<a href="#"><img src="images/local/beiying-3.jpg"></a>
+						</div>
 					</div>
-					<div class="img-box">					
-						<a href="#"><img src="images/local/beiying-2.jpg"></a>
+					<div class="clearfix">
+						<p class="fl">作者：<span>小成成</span></p>
+						<p class="update fr">1天前</p>
 					</div>
-					<div class="img-box">					
-						<a href="#"><img src="images/local/beiying-3.jpg"></a>
-					</div>
-				</div>
-				<div class="clearfix">
-					<p class="fl">作者：<span>小成成</span></p>
-					<p class="update fr">1天前</p>
-				</div>
-			</li>				
-		</ul>
+				</li>			
+			</ul>
+			<div class="right-navigation fl">
+				
+			</div>
+		</div>
 	</div>
 	<!-- 正文内容 end -->
 	<div class="shade">
