--- a/login.html
+++ b/login.html
@@ -152,6 +152,11 @@
 			window.history.back();
 		});
 
+		$('#modal-alert').on('click','.iziModal-button-close',function(){
+				//UnMaskIt($('.mask'));
+			window.history.back();
+		});
+
 
 
         </script>
