围诚三天界面优化 旧代码调整 11.22更新

--- a/indexx.html
+++ b/indexx.html
@@ -68,7 +68,7 @@
 	<div class="news-item layout">
 		<div class="clearfix">
 			<div class="left-navgation fl">
-				<h2>Plus跟帖排行<a href="bbs.html">更多>></a></h2>
+				<h2>Plus热帖排行<a href="bbs.html">更多>></a></h2>
 				<ul>
 					<!-- <li class="clearfix">
 						<em class="fl">1</em>
@@ -112,6 +112,22 @@
 					</li>
  -->
 				</ul>
+				<div class="friendly-link">
+					<h2>友情链接</h2>
+					<div class="clearfix">
+						<a href="#">腾讯校招</a>
+						<a href="#">华为校招</a>
+						<a href="#">网易校招</a>
+						<a href="#">广州商学院官网</a>
+						<a href="#">华南师范大学官网</a>
+						<a href="#">华南农业大学官网</a>
+						<a href="#">华南理工大学官网</a>
+						<a href="#">农工商职业学院官网</a>
+						<a href="#">广州大学华软软件学院官网</a>
+						<a href="#">广州财经大学华商学院官网</a>
+					</div>
+				</div>
+
 			</div>
 			<ul class="list fl">
 				<li>
@@ -242,7 +258,54 @@
 				</li>			
 			</ul>
 			<div class="right-navigation fl">
-				
+				<h2>活动推广</h2>
+				<ul class="tuiguang">
+					<li class="cur">
+						<a href="#">
+							<img src="images/local/tuiguang_1.jpg">
+							<div class="txt-mask">
+								<p>「教育无边界」<br><span>立即查看！</span></p>
+
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="images/local/tuiguang_2.jpg">
+							<div class="txt-mask">
+								<p>「美的秋招」<br><span>你懂的美，美的懂你！</span></p>
+
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="images/local/tuiguang_3.jpg">
+							<div class="txt-mask">
+								<p>「小米」校招季<br><span>做未知世界的开拓者！</span></p>
+
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="images/local/tuiguang_4.jpg">
+							<div class="txt-mask">
+								<p>「高校」合伙人<br><span>快速成为创业达人！</span></p>
+
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="images/local/tuiguang_5.jpg">
+							<div class="txt-mask">
+								<p>「备战」教师资格证<br><span>就选师知匠！</span></p>
+
+							</div>
+						</a>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</div>
