--- a/bbs.html
+++ b/bbs.html
@@ -120,6 +120,7 @@
 			</div>
 			<ul class="pagination-lump clearfix">
 				<li class="prev"><p>首页</p></li>
+				<li class="shang"><p>上一页</p></li>
 				<li class="cur"><p>1</p></li>
 				<li><p>2</p></li>
 				<li><p>3</p></li>
@@ -131,7 +132,8 @@
 				<li><p>9</p></li>
 				<li><p>10</p></li>
 				<li class="next"><p>下一页</p></li>
-				<li class="last"><p>返回上个状态</p></li>
+				<li class="last"><p>尾页</p></li>
+				<!-- <li class="last"><p>返回上个状态</p></li> -->
 			</ul>
 			<!-- <div class="more mt-20"><button class="tc">加载更多</button></div> -->
 		</div>
