分页逻辑修改，刷新评论逻辑实现，完善评论区JSON格式

--- a/person-center.html
+++ b/person-center.html
@@ -21,7 +21,7 @@
 	<!-- 顶部 end -->
 	<div class="welcome-lump clearfix">
 		<div class="fl">
-			<p>用户 <span class="id">13660449184</span> 您好</p>
+			<p>用户 <span class="phone">13660449184</span> 您好</p>
 		</div>
 		<div class="fl ml-30">
 			<p>当前积分：<span class="point">450</span></p>
