修改围诚Plus板块 上传字段，新建围诚三天板块 物品详情页界面开发

--- a/sale.html
+++ b/sale.html
@@ -8,8 +8,10 @@
 	<link rel="stylesheet" href="css/iziModal.css"></link>
 	<link rel="stylesheet" href="css/index.css"></link>
 	<link rel="stylesheet" href="css/jq22.css"></link>
+	<link rel="stylesheet" href="css/webuploader.css">
 	<link rel="stylesheet" href="css/sale.css"></link>
 	<script src="js/jquery.js"></script>
+	<script src="js/webuploader.js"></script>
 	<script src="js/iziModal.js"></script>
 	<script src="js/global.js"></script>
 	<script src="js/init.js"></script>
@@ -41,110 +43,226 @@
 		</div>
 	</div>
 	<div class="threeday-content layout">
-		<h2 class="tt">Plus主发布<span>(本平台不提供线上支付，仅提供Plus主发布物品转让信息，可租可借，但平台不提供交易，只提供交易时间、交易地点和提醒功能，发布的信息三天内有效。)</span></h2>
+		<h2 class="tt">Plus主发布<span>(本平台不提供线上支付，仅提供Plus主发布物品转让信息，可卖可租，但平台不提供交易，只提供交易时间、交易地点和提醒功能，发布的信息三天内有效。)</span></h2>
 		<div class="container demo-3 no-js">
-		<section id="grid" class="grid clearfix">
-			<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-				<figure>
-					<img src="images/local/sale_bag.jpg" />
-					<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-					<figcaption>
-						<h2>迷彩双肩包</h2>
-						<p>交易地点：<span>广州商学院</span></p>
-						<p>发布时间：<span>2017-11-10</span></p>
-						<button>查看详情</button>
-					</figcaption>
-				</figure>
-			</a>
-			<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-				<figure>
-					<img src="images/local/sale_bag.jpg" />
-					<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-					<figcaption>
-						<h2>迷彩双肩包</h2>
-						<p>交易地点：<span>广州商学院</span></p>
-						<p>发布时间：<span>2017-11-10</span></p>
-						<button>查看详情</button>
-					</figcaption>
-				</figure>
-			</a>
-			<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-				<figure>
-					<img src="images/local/sale_bag.jpg" />
-					<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-					<figcaption>
-						<h2>迷彩双肩包</h2>
-						<p>交易地点：<span>广州商学院</span></p>
-						<p>发布时间：<span>2017-11-10</span></p>
-						<button>查看详情</button>
-					</figcaption>
-				</figure>
-			</a>
-			<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-				<figure>
-					<img src="images/local/sale_bag.jpg" />
-					<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-					<figcaption>
-						<h2>迷彩双肩包</h2>
-						<p>交易地点：<span>广州商学院</span></p>
-						<p>发布时间：<span>2017-11-10</span></p>
-						<button>查看详情</button>
-					</figcaption>
-				</figure>
-			</a>
-			<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-				<figure>
-					<img src="images/local/sale_bag.jpg" />
-					<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-					<figcaption>
-						<h2>迷彩双肩包</h2>
-						<p>交易地点：<span>广州商学院</span></p>
-						<p>发布时间：<span>2017-11-10</span></p>
-						<button>查看详情</button>
-					</figcaption>
-				</figure>
-			</a>
-			<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-				<figure>
-					<img src="images/local/sale_bag.jpg" />
-					<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-					<figcaption>
-						<h2>迷彩双肩包</h2>
-						<p>交易地点：<span>广州商学院</span></p>
-						<p>发布时间：<span>2017-11-10</span></p>
-						<button>查看详情</button>
-					</figcaption>
-				</figure>
-			</a>
-			<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-				<figure>
-					<img src="images/local/sale_bag.jpg" />
-					<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-					<figcaption>
-						<h2>迷彩双肩包</h2>
-						<p>交易地点：<span>广州商学院</span></p>
-						<p>发布时间：<span>2017-11-10</span></p>
-						<button>查看详情</button>
-					</figcaption>
-				</figure>
-			</a>
-			<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
-				<figure>
-					<img src="images/local/sale_bag.jpg" />
-					<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
-					<figcaption>
-						<h2>迷彩双肩包</h2>
-						<p>交易地点：<span>广州商学院</span></p>
-						<p>发布时间：<span>2017-11-10</span></p>
-						<button>查看详情</button>
-					</figcaption>
-				</figure>
-			</a>
-		</section>
-	</div><!-- /container -->
+			<section id="grid" class="grid clearfix">
+				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
+					<figure>
+						<img src="images/local/sale_bag.jpg" />
+						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
+						<figcaption>
+							<h2>迷彩双肩包</h2>
+							<p>交易地点：<span>广州商学院</span></p>
+							<p>发布时间：<span>2017-11-10</span></p>
+							<button>查看详情</button>
+						</figcaption>
+					</figure>
+				</a>
+				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
+					<figure>
+						<img src="images/local/sale_bag.jpg" />
+						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
+						<figcaption>
+							<h2>迷彩双肩包</h2>
+							<p>交易地点：<span>广州商学院</span></p>
+							<p>发布时间：<span>2017-11-10</span></p>
+							<button>查看详情</button>
+						</figcaption>
+					</figure>
+				</a>
+				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
+					<figure>
+						<img src="images/local/sale_bag.jpg" />
+						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
+						<figcaption>
+							<h2>迷彩双肩包</h2>
+							<p>交易地点：<span>广州商学院</span></p>
+							<p>发布时间：<span>2017-11-10</span></p>
+							<button>查看详情</button>
+						</figcaption>
+					</figure>
+				</a>
+				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
+					<figure>
+						<img src="images/local/sale_bag.jpg" />
+						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
+						<figcaption>
+							<h2>迷彩双肩包</h2>
+							<p>交易地点：<span>广州商学院</span></p>
+							<p>发布时间：<span>2017-11-10</span></p>
+							<button>查看详情</button>
+						</figcaption>
+					</figure>
+				</a>
+				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
+					<figure>
+						<img src="images/local/sale_bag.jpg" />
+						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
+						<figcaption>
+							<h2>迷彩双肩包</h2>
+							<p>交易地点：<span>广州商学院</span></p>
+							<p>发布时间：<span>2017-11-10</span></p>
+							<button>查看详情</button>
+						</figcaption>
+					</figure>
+				</a>
+				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
+					<figure>
+						<img src="images/local/sale_bag.jpg" />
+						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
+						<figcaption>
+							<h2>迷彩双肩包</h2>
+							<p>交易地点：<span>广州商学院</span></p>
+							<p>发布时间：<span>2017-11-10</span></p>
+							<button>查看详情</button>
+						</figcaption>
+					</figure>
+				</a>
+				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
+					<figure>
+						<img src="images/local/sale_bag.jpg" />
+						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
+						<figcaption>
+							<h2>迷彩双肩包</h2>
+							<p>交易地点：<span>广州商学院</span></p>
+							<p>发布时间：<span>2017-11-10</span></p>
+							<button>查看详情</button>
+						</figcaption>
+					</figure>
+				</a>
+				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
+					<figure>
+						<img src="images/local/sale_bag.jpg" />
+						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
+						<figcaption>
+							<h2>迷彩双肩包</h2>
+							<p>交易地点：<span>广州商学院</span></p>
+							<p>发布时间：<span>2017-11-10</span></p>
+							<button>查看详情</button>
+						</figcaption>
+					</figure>
+				</a>
+				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
+					<figure>
+						<img src="images/local/sale_bag.jpg" />
+						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
+						<figcaption>
+							<h2>迷彩双肩包</h2>
+							<p>交易地点：<span>广州商学院</span></p>
+							<p>发布时间：<span>2017-11-10</span></p>
+							<button>查看详情</button>
+						</figcaption>
+					</figure>
+				</a>
+				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
+					<figure>
+						<img src="images/local/sale_bag.jpg" />
+						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
+						<figcaption>
+							<h2>迷彩双肩包</h2>
+							<p>交易地点：<span>广州商学院</span></p>
+							<p>发布时间：<span>2017-11-10</span></p>
+							<button>查看详情</button>
+						</figcaption>
+					</figure>
+				</a>
+				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
+					<figure>
+						<img src="images/local/sale_bag.jpg" />
+						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
+						<figcaption>
+							<h2>迷彩双肩包</h2>
+							<p>交易地点：<span>广州商学院</span></p>
+							<p>发布时间：<span>2017-11-10</span></p>
+							<button>查看详情</button>
+						</figcaption>
+					</figure>
+				</a>
+				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
+					<figure>
+						<img src="images/local/sale_bag.jpg" />
+						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
+						<figcaption>
+							<h2>迷彩双肩包</h2>
+							<p>交易地点：<span>广州商学院</span></p>
+							<p>发布时间：<span>2017-11-10</span></p>
+							<button>查看详情</button>
+						</figcaption>
+					</figure>
+				</a>
+				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
+					<figure>
+						<img src="images/local/sale_bag.jpg" />
+						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
+						<figcaption>
+							<h2>迷彩双肩包</h2>
+							<p>交易地点：<span>广州商学院</span></p>
+							<p>发布时间：<span>2017-11-10</span></p>
+							<button>查看详情</button>
+						</figcaption>
+					</figure>
+				</a>
+				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
+					<figure>
+						<img src="images/local/sale_bag.jpg" />
+						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
+						<figcaption>
+							<h2>迷彩双肩包</h2>
+							<p>交易地点：<span>广州商学院</span></p>
+							<p>发布时间：<span>2017-11-10</span></p>
+							<button>查看详情</button>
+						</figcaption>
+					</figure>
+				</a>
+				<a href="#" data-path-hover="M 0,0 0,38 90,58 180.5,38 180,0 z">
+					<figure>
+						<img src="images/local/sale_bag.jpg" />
+						<svg viewBox="0 0 180 320" preserveAspectRatio="none"><path d="M 0 0 L 0 182 L 90 126.5 L 180 182 L 180 0 L 0 0 z "/></svg>
+						<figcaption>
+							<h2>迷彩双肩包</h2>
+							<p>交易地点：<span>广州商学院</span></p>
+							<p>发布时间：<span>2017-11-10</span></p>
+							<button>查看详情</button>
+						</figcaption>
+					</figure>
+				</a>
+			</section>
+		</div><!-- /container -->
 	</div>
 	<div class="fabu-lump">
 		<a href="javascript:void(0);"><i></i>我要发布</a>
+	</div>
+	<div class="editor-lump nolook">
+		<div class="clearfix">
+			<div class="fl mb-10">
+				<p><span style="color: red; vertical-align: middle;">*</span>物品名称</p>
+				<input placeholder="请输入物品名称" class="ipt nname">
+			</div>
+			<div class="fl mb-10">
+				<p><span style="color: red; vertical-align: middle;">*</span>交易地点</p>
+				<input placeholder="请输入交易地点" class="ipt wwhere">
+			</div>
+			<div class="fl mb-10">
+				<p><span style="color: red; vertical-align: middle;">*</span>新旧程度</p>
+				<input placeholder="请输入已使用年限或几成新" class="ipt nnew">
+			</div>
+			<div class="fl mb-10">
+				<p><span style="color: red; vertical-align: middle;">*</span>交易价格</p>
+				<input placeholder="请输入交易价格（单位：元）" class="ipt pprice">
+			</div>
+		</div>
+		<div class="edit-content">
+			<i class="stop">×</i>
+			<p>物品描述</p>
+			<textarea placeholder="添加联系方式,物品详细信息...."></textarea>
+			<p class="upload">+添加图片</p>
+			<div class="img-preview clearfix">
+				<!-- <img src="images/local/init.jpg"> -->
+			</div>
+			<span>提示：最多上传4张，交易动态可在“我的围诚”查看哦~</span>
+
+			<a href="javascript:void(0);" class="final_submit">发布物品</a>
+		</div>
 	</div>
 	<!-- 正文内容 end -->
 	<div class="shade">
@@ -237,6 +355,7 @@
 	<div id="modal-alert" class="iziModal"></div>
 	<div id="modal-alert1" class="iziModal"></div>
 	<div id="modal-alert2" class="iziModal"></div>
+	<div id="modal-alert3" class="iziModal"></div>
 	<ul class="side-navigation">
 		<li class="contact"><a href="#"><i></i>商务<br>洽谈<img src="images/index/contact.jpg"></a></li>
 		<li class="money"><a href="#"><i ></i>支持<br>我们<img src="images/index/money.jpg"></a></li>
@@ -307,40 +426,9 @@
 		
 	</div>
 	<!-- 登录界面 end-->
-	<script>
-		(function() {
-
-			function init() {
-				var speed = 300,
-				easing = mina.backout;
-
-				[].slice.call ( document.querySelectorAll( '#grid > a' ) ).forEach( function( el ) {
-					var s = Snap( el.querySelector( 'svg' ) ), path = s.select( 'path' ),
-					pathConfig = {
-						from : path.attr( 'd' ),
-						to : el.getAttribute( 'data-path-hover' )
-					};
-
-					el.addEventListener( 'mouseenter', function() {
-						path.animate( { 'path' : pathConfig.to }, speed, easing );
-					} );
-
-					el.addEventListener( 'mouseleave', function() {
-						path.animate( { 'path' : pathConfig.from }, speed, easing );
-					} );
-				} );
-			}
-
-			init();
-
-		})();
 
 
-		$(".side-navigation li.top a").click(function(){
-			$("html,body").animate({scrollTop: 0}, 1000);
-		});
-	</script>
-
+	<script src="js/sale.js"></script>
 	<script src="js/common.js"></script>
 	<script src="js/placeholder.js"></script> 
 </body>
