--- a/bbs.html
+++ b/bbs.html
@@ -119,22 +119,14 @@
 				</ul>
 			</div>
 			<ul class="pagination-lump clearfix">
-				<li class="prev"><p>首页</p></li>
-				<li class="shang"><p>上一页</p></li>
-				<li class="cur"><p>1</p></li>
-				<li><p>2</p></li>
-				<li><p>3</p></li>
-				<li><p>4</p></li>
-				<li><p>5</p></li>
-				<li><p>6</p></li>
-				<li><p>7</p></li>
-				<li><p>8</p></li>
-				<li><p>9</p></li>
-				<li><p>10</p></li>
+				<li class="first"><p>首页</p></li>
+				<li class="prev"><p>上一页</p></li>
 				<li class="next"><p>下一页</p></li>
-				<li class="last"><p>尾页</p></li>
+				<li><input type="text" class="ipt" placeholder="请输入页数" maxlength="2"></li>
+				<li><p class="search">搜索</p></li>
 				<!-- <li class="last"><p>返回上个状态</p></li> -->
 			</ul>
+			<p class="cur-page tc">当前页数为第<span>1</span>页</p>
 			<!-- <div class="more mt-20"><button class="tc">加载更多</button></div> -->
 		</div>
 		<div class="right-content fl">
@@ -231,10 +223,7 @@
 				<img class="fl" src="images/local/init.jpg">
 				<p class="fl">未登录</p>
 			</li>
-			<li class="clearfix">
-				<img class="fl" src="images/local/mafeifei.jpg">
-				<p class="fl">卢本伟</p>
-			</li>
+			
 		</ul>
 		<div class="chat-box hide">
 			<div class="operate clearfix">
